--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="email_text_placeholder">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer</string>
     <string name="hello_library">Привет, медиатека!</string>
+    <string name="track_name_placeholder">Track name</string>
+    <string name="artist_name_placeholder">Artist</string>
+    <string name="track_time_placeholder">0:00</string>
 </resources>
