--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="track_name_placeholder">Track name</string>
     <string name="artist_name_placeholder">Artist</string>
     <string name="track_time_placeholder">0:00</string>
+    <string name="connection_failed">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="empty_search">Ничего не нашлось</string>
+    <string name="Refresh">Обновить</string>
 </resources>
