--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,11 @@
     <string name="library_is_empty">Ваша медиатека пуста</string>
     <string name="new_playlist">Новый плейлист</string>
     <string name="playlist_none">Вы не создали ни одного плейлиста</string>
+    <string name="create">Создать</string>
+    <string name="name_required">Название*</string>
+    <string name="description">Описание</string>
+    <string name="finish_playlist_creation_question">Завершить создание плейлиста?</string>
+    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
+    <string name="cancel">Отмена</string>
+    <string name="finish">Завершить</string>
 </resources>
