--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,10 @@
     <string name="add_to_playlist">Добавить в плейлист</string>
     <string name="edit">Редактировать</string>
     <string name="delete_playlist">Удалить плейлист</string>
+    <string name="delete_track">Удалить трек</string>
+    <string name="do_you_want_delete_track">Хотите удалить трек</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
 
     <plurals name="tracks">
         <item quantity="few">%1$d трека</item>
@@ -48,5 +52,13 @@
         <item quantity="one">%1$d трек</item>
         <item quantity="two">%1$d трека</item>
         <item quantity="other">%1$d треков</item>
+    </plurals>
+
+    <plurals name="minutes">
+        <item quantity="few">%1$d минуты</item>
+        <item quantity="many">%1$d минут</item>
+        <item quantity="one">%1$d минута</item>
+        <item quantity="two">%1$d минуты</item>
+        <item quantity="other">%1$d минут</item>
     </plurals>
 </resources>
