--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="country">Страна</string>
     <string name="favorite_tracks">Избранные треки</string>
     <string name="playlists">Плейлисты</string>
+    <string name="playlist">Плейлист</string>
     <string name="library_is_empty">Ваша медиатека пуста</string>
     <string name="new_playlist">Новый плейлист</string>
     <string name="playlist_none">Вы не создали ни одного плейлиста</string>
@@ -40,11 +41,16 @@
     <string name="permission_image_access_required_for">Разрешение на доступ к изображениям необходимо для выбора обложки</string>
     <string name="add_to_playlist">Добавить в плейлист</string>
     <string name="edit">Редактировать</string>
+    <string name="edit_info">Редактировать информацию</string>
     <string name="delete_playlist">Удалить плейлист</string>
     <string name="delete_track">Удалить трек</string>
     <string name="do_you_want_delete_track">Хотите удалить трек</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
+    <string name="cannot_share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
+    <string name="choose_app_for_share">Выберите приложение для отправки</string>
+    <string name="do_you_want_to_delete_playlist_name">Хотите удалить плейлист \"%1$s\"?</string>
+    <string name="save">Сохранить</string>
 
     <plurals name="tracks">
         <item quantity="few">%1$d трека</item>
