--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,12 +44,12 @@
     <string name="edit_info">Редактировать информацию</string>
     <string name="delete_playlist">Удалить плейлист</string>
     <string name="delete_track">Удалить трек</string>
-    <string name="do_you_want_delete_track">Хотите удалить трек</string>
+    <string name="do_you_want_delete_track">Хотите удалить трек?</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
     <string name="cannot_share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
     <string name="choose_app_for_share">Выберите приложение для отправки</string>
-    <string name="do_you_want_to_delete_playlist_name">Хотите удалить плейлист \"%1$s\"?</string>
+    <string name="do_you_want_to_delete_playlist_name">Хотите удалить плейлист \"%1$s\" ?</string>
     <string name="save">Сохранить</string>
 
     <plurals name="tracks">
